force-app/main/default/objects/PricebookEntry/fields/Cycle_Related_Item__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Related_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cycle Related Item</label>
    <type>Checkbox</type>
</CustomField>