force-app/main/default/objects/PricebookEntry/fields/GL_Account__c.field-meta.xml
<CustomField>
    <fullName>GL_Account__c</fullName>
    <label>GL Account</label>
    <length>10</length>
    <type>Text</type>
</CustomField>