force-app/main/default/objects/PricebookEntry/fields/Is_Patient_Related__c.field-meta.xml
<CustomField>
    <fullName>Is_Patient_Related__c</fullName>
    <formula>Product2.Is_Patient_Related__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Patient Related</label>
    <type>Checkbox</type>
</CustomField>